# DLA-Future-Fortran

./: .clangd  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  DLA-Future-Fortran.md  DOCUMENTATION.md  LICENSE  README.md  RELEASE_PROCEDURE.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  check_license.sh
.github/workflows/: check_license_header.yaml  docs.yaml  format.yaml
ci/: ci-common.yml  cscs-ci.yml  ctest_to_gitlab.sh  mpi-ctest
ci/cpu/: gcc11_mkl.yml  gcc11_openblas.yml
ci/docker/: build.Dockerfile  common.yaml  deploy.Dockerfile  mkl.yaml  openblas.yaml
cmake/: DLAF-FortranConfig.cmake.in  DLAFFortranConfig.cmake.in
docs/: index.html  search.html
docs/lists/: modules.html  procedures.html
docs/module/: dlaf_fortran.html
docs/proc/: dlaf_create_grid_from_blacs.html  dlaf_finalize.html  dlaf_free_grid.html  dlaf_initialize.html  dlaf_pcheevd.html  dlaf_pchegvx.html  dlaf_pcpotrf.html  dlaf_pdpotrf.html  dlaf_pdsyevd.html  dlaf_pdsygvx.html  dlaf_pspotrf.html  dlaf_pssyevd.html  dlaf_pssygvx.html  dlaf_pzheevd.html  dlaf_pzhegvx.html  dlaf_pzpotrf.html
docs/snippets/: a.md  b.md  check-restrictions.md  desca.md  descb.md  descz.md  ia.md  ib.md  il.md  info.md  iu.md  iz.md  ja.md  jb.md  jz.md  n.md  note-b-factorized.md  note-host-matrix.md  note-local-evals.md  note-pika.md  pcheevd.md  pchegvd.md  pdsyevd.md  pdsygvd.md  pssyevd.md  pssygvd.md  pzheevd.md  pzhegvd.md  uplo-w-note.md  uplo.md  w.md  z.md
docs/sourcefile/: dlaf_fortran.f90.html
docs/tipuesearch/: tipuesearch_content.js
main/: index.html  search.html
main/lists/: modules.html  procedures.html
main/module/: dlaf_fortran.html
main/proc/: dlaf_create_grid_from_blacs.html  dlaf_finalize.html  dlaf_free_all_grids.html  dlaf_free_grid.html  dlaf_initialize.html  dlaf_pcheevd.html  dlaf_pcheevd_partial_spectrum.html  dlaf_pchegvd.html  dlaf_pchegvd_factorized.html  dlaf_pchegvd_partial_spectrum.html  dlaf_pchegvd_partial_spectrum_factorized.html  dlaf_pcpotrf.html  dlaf_pcpotri.html  dlaf_pdpotrf.html  dlaf_pdpotri.html  dlaf_pdsyevd.html  dlaf_pdsyevd_partial_spectrum.html  dlaf_pdsygvd.html  dlaf_pdsygvd_factorized.html  dlaf_pdsygvd_partial_spectrum.html  dlaf_pdsygvd_partial_spectrum_factorized.html  dlaf_pspotrf.html  dlaf_pspotri.html  dlaf_pssyevd.html  dlaf_pssyevd_partial_spectrum.html  dlaf_pssygvd.html  dlaf_pssygvd_factorized.html  dlaf_pssygvd_partial_spectrum.html  dlaf_pssygvd_partial_spectrum_factorized.html  dlaf_pzheevd.html  dlaf_pzheevd_partial_spectrum.html  dlaf_pzhegvd.html  dlaf_pzhegvd_factorized.html  dlaf_pzhegvd_partial_spectrum.html  dlaf_pzhegvd_partial_spectrum_factorized.html  dlaf_pzpotrf.html  dlaf_pzpotri.html
main/search/: search_database.json
main/sourcefile/: dlaf_fortran.f90.html
main/src/: dlaf_fortran.f90
main/tipuesearch/: tipuesearch_content.js
misc/: HEADER
scripts/: roll_release.sh  update_copyright.sh
spack/: repo.yaml
src/: CMakeLists.txt  dlaf_fortran.f90
test/: CMakeLists.txt  grid1.f90  grid2.f90  init.f90  pcheevd.f90  pchegvd.f90  pchegvx.f90  pcpotrf.f90  pcpotrf_lower.f90  pcpotrf_upper.f90  pcpotri.f90  pcpotri_lower.f90  pcpotri_upper.f90  pdpotrf.f90  pdpotrf_lower.f90  pdpotrf_upper.f90  pdpotri.f90  pdpotri_lower.f90  pdpotri_upper.f90  pdsyevd.f90  pdsygvd.f90  pdsygvx.f90  pspotrf.f90  pspotrf_lower.f90  pspotrf_upper.f90  pspotri.f90  pspotri_lower.f90  pspotri_upper.f90  pssyevd.f90  pssygvd.f90  pssygvx.f90  pzheevd.f90  pzhegvd.f90  pzhegvx.f90  pzpotrf.f90  pzpotrf_lower.f90  pzpotrf_upper.f90  pzpotri.f90  pzpotri_lower.f90  pzpotri_upper.f90
test/fpp/: CMakeLists.txt  pxheevd.fpp  pxhegvx.fpp  pxpotrf.fpp
test/helpers/: CMakeLists.txt  pxheevd.fypp  pxhegvd.fypp  pxhegvx.fypp  pxpotrf.fypp  pxpotri.fypp
test/utils/: CMakeLists.txt  testutils.fpp  testutils.fypp
v0.3.0/: index.html  search.html
v0.3.0/lists/: modules.html  procedures.html
v0.3.0/module/: dlaf_fortran.html
v0.3.0/proc/: dlaf_create_grid_from_blacs.html  dlaf_finalize.html  dlaf_free_grid.html  dlaf_initialize.html  dlaf_pcheevd.html  dlaf_pcheevd_partial_spectrum.html  dlaf_pchegvd.html  dlaf_pchegvd_factorized.html  dlaf_pchegvd_partial_spectrum.html  dlaf_pchegvd_partial_spectrum_factorized.html  dlaf_pcpotrf.html  dlaf_pdpotrf.html  dlaf_pdsyevd.html  dlaf_pdsyevd_partial_spectrum.html  dlaf_pdsygvd.html  dlaf_pdsygvd_factorized.html  dlaf_pdsygvd_partial_spectrum.html  dlaf_pdsygvd_partial_spectrum_factorized.html  dlaf_pspotrf.html  dlaf_pssyevd.html  dlaf_pssyevd_partial_spectrum.html  dlaf_pssygvd.html  dlaf_pssygvd_factorized.html  dlaf_pssygvd_partial_spectrum.html  dlaf_pssygvd_partial_spectrum_factorized.html  dlaf_pzheevd.html  dlaf_pzheevd_partial_spectrum.html  dlaf_pzhegvd.html  dlaf_pzhegvd_factorized.html  dlaf_pzhegvd_partial_spectrum.html  dlaf_pzhegvd_partial_spectrum_factorized.html  dlaf_pzpotrf.html
v0.3.0/sourcefile/: dlaf_fortran.f90.html
v0.3.0/src/: dlaf_fortran.f90
v0.3.0/tipuesearch/: tipuesearch_content.js
v0.4.0/: index.html  search.html
v0.4.0/lists/: modules.html  procedures.html
v0.4.0/module/: dlaf_fortran.html
v0.4.0/proc/: dlaf_create_grid_from_blacs.html  dlaf_finalize.html  dlaf_free_all_grids.html  dlaf_free_grid.html  dlaf_initialize.html  dlaf_pcheevd.html  dlaf_pcheevd_partial_spectrum.html  dlaf_pchegvd.html  dlaf_pchegvd_factorized.html  dlaf_pchegvd_partial_spectrum.html  dlaf_pchegvd_partial_spectrum_factorized.html  dlaf_pcpotrf.html  dlaf_pdpotrf.html  dlaf_pdsyevd.html  dlaf_pdsyevd_partial_spectrum.html  dlaf_pdsygvd.html  dlaf_pdsygvd_factorized.html  dlaf_pdsygvd_partial_spectrum.html  dlaf_pdsygvd_partial_spectrum_factorized.html  dlaf_pspotrf.html  dlaf_pssyevd.html  dlaf_pssyevd_partial_spectrum.html  dlaf_pssygvd.html  dlaf_pssygvd_factorized.html  dlaf_pssygvd_partial_spectrum.html  dlaf_pssygvd_partial_spectrum_factorized.html  dlaf_pzheevd.html  dlaf_pzheevd_partial_spectrum.html  dlaf_pzhegvd.html  dlaf_pzhegvd_factorized.html  dlaf_pzhegvd_partial_spectrum.html  dlaf_pzpotrf.html  (+1 more)
v0.5.0/: index.html  search.html
(+55 files in other folders)
